# applicative-load-observability

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
analyzer/: .dockerignore  Dockerfile  _baselines.py  _decompression.py  _logging.py  _metrics.py  _routes.py  main.py  parser.py  pyproject.toml  record_builder.py  requirements.txt  stress.py
analyzer/parser/: __init__.py  _geo.py  _headers.py  _path.py  _request_body.py  _response_body.py
analyzer/record_builder/: __init__.py  _assembly.py  _builder.py  _models.py  _msearch.py  _schema.py  _stress.py
analyzer/stress/: __init__.py  _clause_counting.py  _cost_indicators.py  _formulas.py
clickhouse_setup/: Dockerfile  _client.py  _schema.py  setup.py
docs/: ARCHITECTURE.md  HELM.md  PRODUCT_SPEC.md  dashboard_improvements.txt  gateway-benchmarking.md  grafana-support.md  haproxy-gateway-analysis.md
gateway/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.template
grafana/: Dockerfile  _dashboard_builders.py  _dashboards.py  _datasource.py  _health_dashboard.py  _health_panels.py  _strings.py  cheat_sheet.md  cheat_sheet_he.html  cheat_sheet_he.md  setup.py
helm/alo/: Chart.yaml  values.schema.json  values.yaml
kibana/: Dockerfile  _client.py  _dashboard_builders.py  _dashboards.py  _index_template.py  _visualizations.py  _viz_builders.py  cheat_sheet.md  client.py  dashboard-cost-indicators.ndjson  dashboard-historical.ndjson  dashboard-usage.ndjson  dashboard.ndjson  dashboards.py  index_template.py  setup.py  visualizations.py
logstash/: Dockerfile  logstash.yml  pipelines.yml
logstash/pipeline/: observability.conf
metricbeat/: metricbeat.yml
nifi/: flow.json
prometheus/: prometheus.yml
shared/: __init__.py  _data.py  _http.py  _stats.py
tests/: conftest.py  help.md  stress_scenarios.py
tests/challenges/: _challenge_broad_match.py  _challenge_forced_refresh.py  _challenge_geo_sort.py  _challenge_geo_sweep.py  _challenge_hidden_cpu.py  _challenge_infra.py  _challenge_mega_bulk.py  _challenge_micro_bulk.py  _challenge_ops.py  _challenge_overfetch.py  _challenge_runner.py  _challenge_shadow_flood.py  _challenge_stealth.py  _challenge_terms_lookup.py  _challenge_unfiltered_aggs.py  _challenge_v1.py  _challenge_volume_flood.py  _trivial_noise.py  _trivial_runner.py  challenge.py  challenge_broad_match.py  helpers.py  (+13 more)
(+119 files in other folders)
