[project]
name = "applicative-load-observability"
version = "2.0.3"
description = "Applicative load observability for Elasticsearch (analytics sink: ClickHouse)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "prometheus-fastapi-instrumentator==7.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-vv --tb=short"
markers = [
    "slow: Tests involving cache TTL waits or heavy computation",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["analyzer", "clickhouse_setup", "grafana", "shared"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
